# akira

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: AKIRA_PLAN.md  RELEASE.md  VALIDATION.md
docs/examples/: fingerprint.md  stack.md
docs/examples/skills/: SKILL.md
docs/examples/skills/python/: SKILL.md
src/akira/: __init__.py  claude_md.py  cli.py  cli_install.py  config.py
src/akira/agents/: __init__.py  base.py  claude_code.py  codex.py  copilot.py  cursor.py  detector.py
src/akira/craft/: __init__.py  context.py
src/akira/detect/: __init__.py  categories.py  models.py  renderer.py  scanner.py
src/akira/detect/detectors/: __init__.py  _python_project.py  (+9 more)
src/akira/fingerprint/: __init__.py  analyzer.py  models.py  renderer.py
src/akira/review/: __init__.py  actions.py  analyzer.py  reporter.py
src/akira/skills/: __init__.py  generator.py  installer.py
src/akira/ui/: __init__.py  banner.py  output.py
tests/: conftest.py  test_agents.py  test_cli.py  test_e2e_workflow.py  test_imports.py
tests/fixtures/django_project/: manage.py  pyproject.toml
tests/fixtures/fastapi_project/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
tests/fixtures/fastapi_project/.github/workflows/: ci.yml
tests/fixtures/fastapi_project/alembic/: env.py
tests/fixtures/fastapi_project/src/fastapi_project/: __init__.py  main.py
tests/fixtures/fastapi_project/tests/: health_check.py
tests/fixtures/minimal_project/: pyproject.toml
tests/test_detect/: test_detector_performance.py  test_python_detectors.py  test_scanner.py  test_stack_expansion_detectors.py  test_stack_renderer.py
tests/test_fingerprint/: test_analyzer.py  test_extractors.py  test_renderer.py  test_style_fixtures.py
tests/test_review/: test_review_analyzer.py
tests/test_skills/: test_skill_generator.py  test_skill_installer.py  test_skill_integration.py  test_skill_templates.py
(+68 files in other folders)
