[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "akira"
version = "1.0.0"
description = "Project-aware skill generation and coding fingerprint CLI for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Akira contributors" },
]
keywords = ["ai-agents", "cli", "developer-tools", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
akira = "akira.cli:main"

[project.urls]
Homepage = "https://github.com/akira/akira"
Issues = "https://github.com/akira/akira/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/akira"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
