[project]
name = "fastapi-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
]

[tool.uv]
dev-dependencies = [
    "mypy==1.13.0",
    "ruff==0.8.0",
    "pre-commit==4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
